Fixed bin_encode test that failed after 64bit fixes. Fixed class typo in Protocol.

--- a/README
+++ b/README
@@ -1,12 +1,10 @@
 NAME
-    Avro -
+    Avro - Modern Data Serializer
 
 SYNOPSIS
       use Avro;
 
 DESCRIPTION
-    Avro is
-
 AUTHOR
     Yann Kerherve <yannk@cpank.org>
 
